--- a/table.html
+++ b/table.html
@@ -75,8 +75,8 @@ function rmtable(){
 
 function color(id,font,back){
   elemcell = document.getElementById(id);
-  elemresult.style.backgroundColor = back;
-  elemresult.style.color = font;
+  elemcell.style.backgroundColor = back;
+  elemcell.style.color = font;
 }
 
 </script>
