--- a/compare.html
+++ b/compare.html
@@ -56,7 +56,7 @@ function numCheck(){
 			var id0 = j.toString()+currentname;
 			if(comparablevalue <= previousvaluelist[j]){
 				TFcount += 0
-				document.getElementById("table").contentWindow.color(id,"#38742A","#9BE585");
+				document.getElementById("table").contentWindow.color(id0,"#38742A","#9BE585");
 				if(currentshop==j && comparablevalue<=previousvaluelist[j]){
 					var elemresult = document.getElementById("result");
 					elemresult.setAttribute("onclick","update()");
