--- a/compare.html
+++ b/compare.html
@@ -161,8 +161,8 @@ function remove(){
 	try{
 		setting();
 		index = grocerylist.indexOf(currentname);
-		if (index%2 ==2){
-			back = "#000000";
+		if (index%2 ==0){
+			back = "#ffffff";
 		}else{
 			back = "#dfdfdf";
 		}
