--- a/compare.html
+++ b/compare.html
@@ -6,9 +6,30 @@
 
 <script type="text/javascript">
 //basenum設定
+function start(){
+	var select = document.createElement('select');
+	select.setAttribute("id","select");
+	select.setAttribute("name","shop");
+	preparation();
+	var option = document.createElement('option');
+	option.setAttribute("value","指定なし");
+	option.setAttribute("label","指定なし");
+	select.appendChild(option)
+	for(i=0;i<nos0;i++){
+		if(shoplist0[i]!==""){
+			var option = document.createElement('option');
+			option.setAttribute("value",shoplist0[i]);
+			option.setAttribute("label",shoplist0[i]);
+			select.appendChild(option);
+		}else{
+			;
+		}
+	}
+	document.getElementById("selectcell").appendChild(select);
+}
 function directinput(shop,name){
 	remove();
-	setting();
+	preparation();
 	var elemname = document.getElementById("name");
 	elemname.value = name;
 	currentname = name;
@@ -19,22 +40,21 @@ function directinput(shop,name){
 function nameCheck(){
 	currentshop = "0"
 	remove();
-	setting();
+	preparation();
 	var	elemresult = document.getElementById("result");
 	var inputname = document.getElementById("name").value;
 	currentname = inputname;
 	if(grocerylist.indexOf(inputname) == -1){
-		var elemresult = document.getElementById("result");
-		elemresult.setAttribute("onclick","register()");
-		elemresult.textContent = "追加";
+		var elemupdatecell = document.getElementById("updatecell");
+		elemupdatecell.setAttribute("onclick","register()");
+		elemupdatecell.textContent = "追加";
 		var elemnum = document.createElement("input");
 		elemnum.setAttribute("type","number");
 		elemnum.setAttribute("class","textboxstyle");
 		elemnum.setAttribute("id","num");
-			elemnum.setAttribute("placeholder","個/g");
+		elemnum.setAttribute("placeholder","個/g");
 		var elemnumcell = document.getElementById("numcell");
 		elemnumcell.appendChild(elemnum);
-		registerTF = false;
 	}else{
 		input();
 	}
@@ -48,7 +68,7 @@ function numCheck(){
 	}else if (inputnum == 0) {
 		;
 	}else{
-		setting();
+		preparation();
 		basenum0 = userlist[username][2][currentname][0];
 		previousvaluelist = userlist[username][2][currentname];
 		comparablevalue = (inputvalue*basenum0)/inputnum;
@@ -59,19 +79,19 @@ function numCheck(){
 				TFcount += 0
 				document.getElementById("table").contentWindow.color(id0,"#38742A","#9BE585");
 				if(currentshop==j && comparablevalue<=previousvaluelist[j]){
-					var elemresult = document.getElementById("result");
-					elemresult.setAttribute("onclick","update()");
-					elemresult.textContent = "更新";
-					resultTF = false;
+					var elemupdatecell = document.getElementById("updatecell");
+					elemupdatecell.setAttribute("onclick","update()");
+					elemupdatecell.textContent = "更新";
 				}else{
 					;
 				}
 			}else if(currentshop==j && previousvaluelist[j]==null){
 				document.getElementById("table").contentWindow.color(id0,"#38742A","#9BE585");
-				var elemresult = document.getElementById("result");
-				elemresult.setAttribute("onclick","update()");
-				elemresult.textContent = "更新";
-				resultTF = false;
+				var elemupdatecell = document.getElementById("updatecell");
+				elemupdatecell.setAttribute("onclick","update()");
+				elemupdatecell.style.color = "#38742A"
+				elemupdatecell.style.backgroundColor = "#9BE585";
+				elemupdatecell.textContent = "更新";
 			}else{
 				document.getElementById("table").contentWindow.color(id0,"#DA3B26","#EDD1E4");
 				TFcount += 1;
@@ -79,31 +99,22 @@ function numCheck(){
 		}
 		elemresult = document.getElementById("result");
 		if(TFcount==0){
-			elemresult.style.backgroundColor = "#9BE585";
 			elemresult.style.color = "#38742A";
-			result("◯");
+			elemresult.style.backgroundColor = "#9BE585";
+			elemresult.textContent = "◯";
 		}else if(TFcount > 0 && TFcount < nos0){
-			elemresult.style.backgroundColor = "#F7F1AC";
 			elemresult.style.color = "#F27200";
-			result("△");
+			elemresult.style.backgroundColor = "#F7F1AC";
+			elemresult.textContent = "△";
 		}else{
-			elemresult.style.backgroundColor = "#EDD1E4";
 			elemresult.style.color = "#DA3B26";
-			result("×");
+			elemresult.style.backgroundColor = "#EDD1E4";
+			elemresult.textContent = "×";
 		}
 	}
 }
 
-function result(sign){
-	if(resultTF){
-		elemresult = document.getElementById("result");
-		elemresult.textContent = sign;
-	}else{
-		;
-	}
-}
-
-function setting(){
+function preparation(){
 	userlist = JSON.parse(localStorage.getItem('userlist'));
   username = localStorage.getItem('currentuser');
 	shoplist0 = userlist[username][1];
@@ -115,6 +126,7 @@ function setting(){
 	grocerydict =  userlist[username][2];
 	grocerylist = Object.keys(grocerydict);
 }
+
 function input(){
 	inputvalue = 0;
 	inputnum = 1;
@@ -160,7 +172,7 @@ function register(){
 
 function remove(){
 	try{
-		setting();
+		preparation();
 		index = grocerylist.indexOf(currentname);
 		if (index%2 ==0){
 			back = "#ffffff";
@@ -175,11 +187,19 @@ function remove(){
 		;
 	}
 	try{
+		var elemupdatecell = document.getElementById("updatecell");
+		elemelemupdatecell.style.backgroundColor = "#FFFFFF";
+		elemelemupdatecell.style.color = "#000000";
+		elemelemupdatecell.textContent = "";
+		elemelemupdatecell.setAttribute("onclick","");
+	}catch{
+		;
+	}
+	try{
 		var elemresult = document.getElementById("result");
 		elemresult.style.backgroundColor = "#FFFFFF";
 		elemresult.style.color = "#000000";
 		elemresult.textContent = "";
-		elemresult.setAttribute("onclick","");
 	}catch{
 		;
 	}
@@ -254,9 +274,15 @@ function remove(){
 }
 </style>
 </head>
-<body>
+<body onload="start()">
 <header>
 <table class="tablestyle1">
+<tr>
+<td class="tdstyle3" onclick="clear()">クリア</td>
+<td class="tdstyle3" onclick="setting()">設定</td>
+<td class="tdstyle3" id="selectcell"></td>
+<td class="tdstyle3" id="updatecell"></td>
+</tr>
 <tr>
 <td class="tdstyle1"><input type="text" class="textboxstyle" id="name" onkeyup="nameCheck()"></input></td>
 <td class="tdstyle2" id="valuecell"></input></td>
