--- a/table.html
+++ b/table.html
@@ -90,6 +90,7 @@ function color(id,font,back){
 .tablestyle{
   width:100%;
   border: 2px #404040 solid;
+  font-size: 3vh;
 }
 .th0style{
   width:40%;
@@ -97,21 +98,25 @@ function color(id,font,back){
   border: 1px #404040 solid;
   background-color: #404040;
   color:#ffffff;
+  font-weight: bold;
 }
 .th1style{
   height:10vh;
   border: 1px #404040 solid;
   background-color: #404040;
   color:#ffffff;
+  font-weight: bold;
 }
 .td0style{
   width:40%;
   height:10vh;
   border: 1px #404040 solid;
+  text-align: left;
 }
 .td1style{
   height:10vh;
   border: 1px #404040 solid;
+  text-align: right;
 }
 </style>
 </head>
