--- a/compare.html
+++ b/compare.html
@@ -7,6 +7,7 @@
 <script type="text/javascript">
 //basenum設定
 function start(){
+	var selectform = document.createElement('form');
 	var select = document.createElement('select');
 	select.setAttribute("id","select");
 	select.setAttribute("class","selectstyle");
@@ -25,7 +26,9 @@ function start(){
 		}
 	}
 	select.options[0].selected = true
-	document.getElementById("selectcell").appendChild(select);
+	selectform.appendChild(select)
+	document.getElementById("selectcell").appendChild(selectform);
+
 }
 function directinput(shop,name){
 	remove();
