--- a/compare.html
+++ b/compare.html
@@ -16,12 +16,14 @@ function start(){
 	var option0 = document.createElement('option');
 	option0.setAttribute("value","指定なし");
 	option0.setAttribute("label","指定なし");
-	select.appendChild(option0)
+	option0.textContent = "指定なし";
+	select.appendChild(option0);
 	for(i=0;i<nos0;i++){
 		if(shoplist0[i]!==""){
 			var option1 = document.createElement('option');
 			option1.setAttribute("value",shoplist0[i]);
 			option1.setAttribute("label",shoplist0[i]);
+			option1.textContent = shoplist0[i];
 			select.appendChild(option1);
 		}
 	}
