--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@ function login(){
 }
 </script>
 <style>
-.body{
+*{
+	font-family:sans-serif;
+	-webkit-appearance: none;
+  appearance: none;
 	margin:0;
 }
 .tablestyle1{
