--- a/setting.html
+++ b/setting.html
@@ -22,7 +22,10 @@ function register(){
 
 </script>
 <style>
-.body{
+*{
+	font-family:sans-serif;
+	-webkit-appearance: none;
+  appearance: none;
 	margin:0;
 }
 .tablestyle1{
