--- a/table.html
+++ b/table.html
@@ -81,12 +81,13 @@ function color(id,font,back){
 </script>
 <style>
 *{
-  margin:0;
+	font-family:sans-serif;
+	-webkit-appearance: none;
+  appearance: none;
+	margin:0;
   padding:0;
 }
-.body{
-  	margin:0;
-}
+
 .tablestyle{
   width:100%;
   border: 2px #404040 solid;
