--- a/compare.html
+++ b/compare.html
@@ -260,7 +260,7 @@ function judgereset(){
 
 .tablestyle1{
 	height:10vh;
-	width:98vw;
+	width:100%;
 	padding: 0em;
 	table-layout: fixed;
 	color:#000000;
@@ -269,8 +269,10 @@ function judgereset(){
 }
 .tablestyle2{
 	height:80vh;
-	width:97.5vw;
+	width:100%;
 	padding: 0em;
+	border:none;
+	border-top: 1px solid #dfdfdf;
 }
 .tdstyle1{
 	height:50%;
