--- a/table.html
+++ b/table.html
@@ -3,9 +3,9 @@
 <title>table</title>
 <script>
 function btn(elemcurrent){
-  window.parent.directinput(elemcurrentid.substr(0,1),elemcurrentid.substr(1))
-  alert("btn")
   var elemcurrentid=elemcurrent.id;
+  window.parent.directinput(elemcurrentid.substr(0,1),elemcurrentid.substr(1));
+  alert("btn");
   elemcurrent.style.color = "#0000FF";
   elemcurrent.style.backgroundColor = "＃B7DAF5";
   elemcurrentname = document.getElementById("0"+elemcurrentid.substr(1));
