--- a/table.html
+++ b/table.html
@@ -10,10 +10,10 @@ function btn(elemcurrent){
   elemcurrent.style.backgroundColor = "＃B7DAF5";
   elemcurrentname = document.getElementById("0"+elemcurrentid.substr(1));
   elemcurrentname.style.color = "#0000FF";
-  elemcurrentname.backgroundColor = "＃B7DAF5";
+  elemcurrentname.style.backgroundColor = "＃B7DAF5";
   elemcurrentshop = document.getElementById("shop"+elemcurrentid.substr(0,1));
   elemcurrentshop.style.color = "#0000FF";
-  elemcurrentshop.backgroundColor = "＃B7DAF5";
+  elemcurrentshop.style.backgroundColor = "＃B7DAF5";
 }
 
 function mktable(){
