--- a/table.html
+++ b/table.html
@@ -7,13 +7,13 @@ function btn(elemcurrent){
   window.parent.directinput(elemcurrentid.substr(0,1),elemcurrentid.substr(1));
   alert("btn");
   elemcurrent.style.color = "#0000FF";
-  elemcurrent.style.backgroundColor = "＃B7DAF5";
+  elemcurrent.style.backgroundColor = "#B7DAF5";
   elemcurrentname = document.getElementById("0"+elemcurrentid.substr(1));
   elemcurrentname.style.color = "#0000FF";
-  elemcurrentname.style.backgroundColor = "＃B7DAF5";
+  elemcurrentname.style.backgroundColor = "#B7DAF5";
   elemcurrentshop = document.getElementById("shop"+elemcurrentid.substr(0,1));
   elemcurrentshop.style.color = "#0000FF";
-  elemcurrentshop.style.backgroundColor = "＃B7DAF5";
+  elemcurrentshop.style.backgroundColor = "#B7DAF5";
 }
 
 function mktable(){
@@ -37,7 +37,7 @@ function mktable(){
   th0.setAttribute("id","");
   var tr0 = document.createElement('tr');
   tr0.appendChild(th0);
-  for(var j=0; j< nos0; j++){
+  for(var j=1; j<=nos0; j++){
     if(shoplist1[j]!==""){
       var th = document.createElement('th');
       th.textContent = shoplist1[j];
