--- a/compare.html
+++ b/compare.html
@@ -323,22 +323,23 @@ function judgereset(){
 	text-align: center;
 	font-size:3vh;
 }
-.textboxstyle{
+.textboxstyle1{
 	display: block;
 	height:96%;
 	width:96%;
 	padding: 0em 0em;
-	font-size:400%;
 	font-size:3vh;
 	border: 2px solid #dfdfdf;
-	text-align: center;
+	margin: 0 auto;
 }
-.boxstyle{
+.textboxstyle2{
 	display: block;
-	height:100%;
-	width:100%;
+	height:96%;
+	width:96%;
 	padding: 0em 0em;
-	font-size:400%;
+	font-size:3vh;
+	border: 2px solid #dfdfdf;
+	margin: 0 auto;
 }
 .selectstyle{
 	margin:0;
