--- a/compare.html
+++ b/compare.html
@@ -137,8 +137,8 @@ function input(){
 	var elemnum = document.createElement("input");
 	elemvalue.setAttribute("type","number");
 	elemnum.setAttribute("type","number");
-	elemvalue.setAttribute("class","textboxstyle");
-	elemnum.setAttribute("class","textboxstyle");
+	elemvalue.setAttribute("class","textboxstyle2");
+	elemnum.setAttribute("class","textboxstyle2");
 	elemvalue.setAttribute("id","value");
 	elemnum.setAttribute("id","num");
 	elemvalue.setAttribute("onkeyup","numCheck()");
@@ -377,7 +377,7 @@ function judgereset(){
 <td class="tdstyle3" id="updatecell"></td>
 </tr>
 <tr>
-<td class="tdstyle1"><input type="text" class="textboxstyle" id="name" onkeyup="nameCheck()" placeholder="商品名"></input></td>
+<td class="tdstyle1"><input type="text" class="textboxstyle1" id="name" onkeyup="nameCheck()" placeholder="商品名"></input></td>
 <td class="tdstyle2" id="valuecell"></input></td>
 <td class="tdstyle2" id="numcell"></input></td>
 <td class="tdstyle2" id="result"></td>
