--- a/compare.html
+++ b/compare.html
@@ -78,7 +78,7 @@ function numCheck(){
 			var id0 = j.toString()+currentname;
 			if(comparablevalue <= previousvaluelist[j]){
 				TFcount += 0
-				document.getElementById("table").contentWindow.color(id0,"#38742A","#9BE585");
+				document.getElementById("table").contentWindow.tdcolor(id0,"#38742A","#9BE585");
 				if(currentshop==j && comparablevalue<previousvaluelist[j]){
 					var elemupdatecell = document.getElementById("updatecell");
 					elemupdatecell.setAttribute("onclick","update()");
@@ -87,14 +87,14 @@ function numCheck(){
 					elemupdatecell.textContent = "更新";
 				}
 			}else if(currentshop==j && previousvaluelist[j]==null){
-				document.getElementById("table").contentWindow.color(id0,"#38742A","#9BE585");
+				document.getElementById("table").content .tdcolor(id0,"#38742A","#9BE585");
 				var elemupdatecell = document.getElementById("updatecell");
 				elemupdatecell.setAttribute("onclick","update()");
 				elemupdatecell.style.color = "#38742A"
 				elemupdatecell.style.backgroundColor = "#9BE585";
 				elemupdatecell.textContent = "更新";
 			}else if(previousvaluelist[j]!==null){
-				document.getElementById("table").contentWindow.color(id0,"#DA3B26","#EDD1E4");
+				document.getElementById("table").contentWindow.tdcolor(id0,"#DA3B26","#EDD1E4");
 				TFcount += 1;
 			}else{
 				TFcount += 1;
