--- a/table.html
+++ b/table.html
@@ -97,7 +97,7 @@ function thcolor(id){
   var elemth = document.getElementById(id);
   elemth.style.color = "#ffffff";
   elemth.style.backgroundColor = "#404040";
-  alert("tdcolor");
+  alert("thcolor");
 }
 
 </script>
