--- a/compare.html
+++ b/compare.html
@@ -41,9 +41,9 @@ function directinput(shop,name){
 }
 
 function nameCheck(){
-	currentshop = "0"
 	remove();
 	preparation();
+	currentshop = 0;
 	var	elemresult = document.getElementById("result");
 	var inputname = document.getElementById("name").value;
 	currentname = inputname;
