--- a/compare.html
+++ b/compare.html
@@ -55,7 +55,7 @@ function nameCheck(){
 		elemupdatecell.style.backgroundColor = "#9BE585";
 		var elemnum = document.createElement("input");
 		elemnum.setAttribute("type","number");
-		elemnum.setAttribute("class","textboxstyle");
+		elemnum.setAttribute("class","textboxstyle2");
 		elemnum.setAttribute("id","num");
 		elemnum.setAttribute("placeholder","個/g");
 		var elemnumcell = document.getElementById("numcell");
