--- a/compare.html
+++ b/compare.html
@@ -218,6 +218,7 @@ function inputclear(){
 }
 
 function judgereset(){
+	alert("judgereset");
 	preparation();
 	try{
 		var index = grocerylist.indexOf(currentname);
