--- a/table.html
+++ b/table.html
@@ -93,7 +93,7 @@ function tdcolor(id,font,back){
   elemtd.style.color = font;
   elemtd.style.backgroundColor = back;
   elemtd.style.border = "2px #404040 solid"
-  alert("tdcolor");
+  alert(id+font+back);
 }
 function thcolor(id){
   var elemth = document.getElementById(id);
