--- a/table.html
+++ b/table.html
@@ -92,16 +92,16 @@ function tdcolor(id,font,back){
   var elemtd = document.getElementById(id);
   elemtd.style.color = font;
   elemtd.style.backgroundColor = back;
-  elemtd.style.border = "1px #404040 solid"
-  alert(id+font+back);
 }
 function thcolor(id){
   var elemth = document.getElementById(id);
   elemth.style.color = "#ffffff";
   elemth.style.backgroundColor = "#404040";
-  alert("thcolor");
 }
-
+function tdborder(id){
+  var elemtd = document.getElementById(id);
+  elemtd.style.border = "1px #404040 solid";
+}
 </script>
 <style>
 *{
