--- a/compare.html
+++ b/compare.html
@@ -32,7 +32,7 @@ function start(){
 }
 function directinput(shop,name){
 	inputremove();
-	try(){
+	try{
 		document.getElementById("table").contentWindow.tdborder(currentshop.toString()+currentname);
 	}catch{
 		;
@@ -47,7 +47,7 @@ function directinput(shop,name){
 
 function nameCheck(){
 	inputremove();
-	try(){
+	try{
 		document.getElementById("table").contentWindow.tdborder(currentshop.toString()+currentname);
 	}catch{
 		;
@@ -327,7 +327,6 @@ function judgereset(){
 	color:#ffffff;
 	text-align: center;
 	font-size:3vh;
-	font-weight: bold;
 }
 .tdstyle4{
 	height:50%;
