--- a/table.html
+++ b/table.html
@@ -131,6 +131,7 @@ function tdborder(id){
   background-color: #404040;
   color:#ffffff;
   font-weight: bold;
+  text-align: left;
 }
 .td0style{
   width:40%;
