--- a/table.html
+++ b/table.html
@@ -2,6 +2,7 @@
 <head>
 <title>table</title>
 <script>
+
 function btn(elemcurrent){
   var elemcurrentid=elemcurrent.id;
   window.parent.directinput(elemcurrentid.substr(0,1),elemcurrentid.substr(1));
@@ -120,18 +121,20 @@ function tdborder(id){
 .th0style{
   width:40%;
   height:10vh;
-  border: 1px #404040 solid;
+  border: 1px #dfdfdf solid;
+  border-bottom: : 1px #404040 solid;
   background-color: #404040;
   color:#ffffff;
   font-weight: bold;
 }
 .th1style{
   height:10vh;
-  border: 1px #404040 solid;
+  border: 1px #dfdfdf solid;
   background-color: #404040;
   color:#ffffff;
   font-weight: bold;
   text-align: left;
+  padding: 2px;
 }
 .td0style{
   width:40%;
