--- a/table.html
+++ b/table.html
@@ -121,8 +121,8 @@ function tdborder(id){
 .th0style{
   width:40%;
   height:10vh;
-  border: 1px #dfdfdf solid;
-  border-bottom: : 1px #404040 solid;
+  border-left: : 1px #dfdfdf solid;
+  border-right: : : 1px #404040 solid;
   background-color: #404040;
   color:#ffffff;
   font-weight: bold;
