--- a/compare.html
+++ b/compare.html
@@ -317,6 +317,7 @@ function judgereset(){
 	width:40%;
 	padding: 0em;
 	text-align: center;
+	margin: 0 auto;
 }
 .tdstyle2{
 	height:50%;
@@ -324,6 +325,7 @@ function judgereset(){
 	padding:0em;
 	text-align: center;
 	font-size:3vh;
+	margin: 0 auto;
 }
 .tdstyle3{
 	height:50%;
@@ -332,6 +334,7 @@ function judgereset(){
 	color:#ffffff;
 	text-align: center;
 	font-size:3vh;
+	margin: 0 auto;
 }
 .tdstyle4{
 	height:50%;
@@ -339,6 +342,8 @@ function judgereset(){
 	padding:0em;
 	color:#ffffff;
 	font-size:3vh;
+	margin: 0 auto;
+
 }
 .textboxstyle1{
 	display: block;
@@ -362,14 +367,14 @@ function judgereset(){
 	margin:0;
 	-webkit-appearance: none;
   appearance: none;
-	height:100%;
+	height:96%;
 	width:96%;
 	color:#ffffff;
 	background-color:#404040;
   border: 2px #dfdfdf solid;
 	font-size:3vh;
 	border-radius: 5%;
-	text-align: center;
+	text-align: left;
 }
 .cellbox{
 	width:96%;
