--- a/compare.html
+++ b/compare.html
@@ -303,7 +303,7 @@ function judgereset(){
 	table-layout: fixed;
 	color:#000000;
 	background-color: #404040;
-
+	margin: 0 auto;
 }
 .tablestyle2{
 	height:80vh;
@@ -311,6 +311,7 @@ function judgereset(){
 	padding: 0em;
 	border:none;
 	border-top: 1px solid #dfdfdf;
+	margin: 0 auto;
 }
 .tdstyle1{
 	height:50%;
@@ -342,33 +343,34 @@ function judgereset(){
 	padding:0em;
 	color:#ffffff;
 	font-size:3vh;
+	text-align: center;
 	margin: 0 auto;
-
 }
 .textboxstyle1{
 	display: block;
 	height:96%;
-	width:96%;
+	width:98%;
 	padding: 0em 0em;
 	font-size:4vh;
-	border: 2px solid #dfdfdf;
+	border: 1px solid #dfdfdf;
 	margin: 0 auto;
 }
 .textboxstyle2{
 	display: block;
 	height:96%;
-	width:96%;
+	width:98%;
 	padding: 0em 0em;
 	font-size:4vh;
-	border: 2px solid #dfdfdf;
+	border: 1px solid #dfdfdf;
 	margin: 0 auto;
+	text-align: right;
 }
 .selectstyle{
 	margin:0;
 	-webkit-appearance: none;
   appearance: none;
 	height:96%;
-	width:96%;
+	width:98%;
 	color:#ffffff;
 	background-color:#404040;
   border: 2px #dfdfdf solid;
@@ -376,15 +378,20 @@ function judgereset(){
 	border-radius: 5%;
 	text-align: left;
 }
+
 .cellbox{
 	width:96%;
 	height:96%;
-	border: 2px solid #dfdfdf; /* 境界線を実線で指定 */
+	border: 2px solid #dfdfdf;
 	text-align: center;
 	border-radius: 5%;
 	display: flex;
   justify-content: center;
   align-items: center;
+}
+
+::placeholder{
+	text-align: left;
 }
 
 </style>
